added rsvp expiration, added masonic title

--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -33,9 +33,11 @@
                                     (click)="setEventForRsvp(event)"
                                     data-bs-toggle="modal"
                                     data-bs-target="#rsvpModal">
-                                    RSVP
-                                </button>
-                                <p>Closes {{ rsvpExpDate }} at 12:00am</p>
+                                        RSVP
+                                    </button>
+                                    <div class="text-base d-flex flex-wrap">
+                                        <p>Closes {{ rsvpExpDate }} at 12:00am</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
