added mobile css

--- a/src/app/forest-city/future-events/future-events.component.scss
+++ b/src/app/forest-city/future-events/future-events.component.scss
@@ -20,4 +20,8 @@
 .rsvpButton {
     display: grid;
     grid-auto-columns: max-content;
+
+    @media screen and (max-width: 424px) {
+        grid-auto-columns: min-content;
+    }
 }
