--- a/src/app/forest-city/image-gallery/gallery-collection/gallery-collection.component.scss
+++ b/src/app/forest-city/image-gallery/gallery-collection/gallery-collection.component.scss
@@ -49,3 +49,12 @@ lightbox {
   max-height: 98vh !important;
   max-width: 98vw !important;
 }
+
+img:hover {
+  transition: transform .2s ease-in;
+  transform: scale(1.3);
+}
+
+img {
+  transition: transform .2s ease-in;
+}
