--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -36,7 +36,7 @@
                                         RSVP
                                     </button>
                                     <div class="text-base d-flex flex-wrap">
-                                        <p>Closes {{ rsvpExpDate }} at 12:00am</p>
+                                        <p>Closes {{ rsvpExpDate }} at 9:00PM</p>
                                     </div>
                                 </div>
                             </div>
