updated url, added top button

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -132,9 +132,9 @@
                 <li class="usa-nav__primary-item">
                     <a routerLink="/upcoming-events" class="usa-nav__link">Upcoming Events</a>
                 </li>
-                <li class="usa-nav__primary-item">
+                <!-- <li class="usa-nav__primary-item">
                     <a routerLink="/image-gallery" class="usa-nav__link">Image Gallery</a>
-                </li>
+                </li> -->
                 <li class="usa-nav__primary-item">
                     <a routerLink="/contact-us" class="usa-nav__link">Contact Us</a>
                 </li>
