--- a/src/app/forest-city/recent-events/recent-events.component.scss
+++ b/src/app/forest-city/recent-events/recent-events.component.scss
@@ -1,3 +1,12 @@
+.header {
+    @media screen and (min-width: 576px) {
+        padding: 1.5rem;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 50vw;
+    }
+}
+
 .card-container {
     @media screen and (min-width: 576px) {
         padding: 1.5rem;
@@ -14,7 +23,6 @@
     margin: 1rem -0.75rem 0;
     border: solid #dee2e6;
     border-width: 1px 0 0;
-    background-color: azure;
 }
 
 .carousel-item {
