--- a/src/app/forest-city/bulletin/bulletin.component.html
+++ b/src/app/forest-city/bulletin/bulletin.component.html
@@ -1,5 +1,5 @@
 <div class="fcl-bulletin primary-content-container">
     <div class="primary-content">
-        <embed [src]="bulletinSrc" type="application/pdf">
+        <iframe [src]="bulletinSrc" type="application/pdf"></iframe>
     </div>
 </div>
