--- a/src/app/forest-city/bulletin/bulletin.component.scss
+++ b/src/app/forest-city/bulletin/bulletin.component.scss
@@ -2,7 +2,7 @@
     .primary-content {
         border: none;
 
-        & > embed {
+        & > iframe {
             width: 100vw;
             height: 2100px;
 
