fixes for accessibility and best practices

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -57,12 +57,12 @@
               </div>
             </div>
             <h3 class="usa-footer__contact-heading">
-                <a href="https://goo.gl/maps/W2FfTtZVSPdJ39zt6" target="_blank" class="text-no-underline hover:text-underline">Lyndhurst Masonic Center</a>
+                <a href="https://goo.gl/maps/W2FfTtZVSPdJ39zt6" target="_blank" class="text-no-underline hover:text-underline" rel="noopener noreferrer">Lyndhurst Masonic Center</a>
             </h3>
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap">
                 <div class="grid-col-auto">
-                  <a href="https://goo.gl/maps/W2FfTtZVSPdJ39zt6" target="_blank">5516 Mayfield Rd, Lyndhurst, OH 44124</a>
+                  <a href="https://goo.gl/maps/W2FfTtZVSPdJ39zt6" target="_blank" rel="noopener noreferrer">5516 Mayfield Rd, Lyndhurst, OH 44124</a>
                 </div>
                 <div class="grid-col-auto">
                   <p>webmaster@forestcity388.com</p>
