--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
             <div class="usa-logo">
                 <em class="usa-logo__text">
                     <a class="navbar-brand" href="/home" title="FCL 388" class="d-flex align-items-center">
-                        <img id="navbar-image" src="../../../assets/images/fcl-bell-color.png" class="bell-logo me-3">
+                        <img alt="Forest City Lodge Bell Logo" id="navbar-image" src="../../../assets/images/fcl-bell-color.png" class="bell-logo me-3">
                         <h1 class="p-0 m-0 d-block d-sm-none primary-title-small text-white">Forest City Lodge No. 388</h1>
                         <h1 class="p-0 m-0 d-none d-sm-block primary-title text-white">Forest City Lodge No. 388</h1>
                     </a>
@@ -80,7 +80,7 @@
                                         <a href="http://www.freemason.com" target="_blank" rel="noopener noreferrer">Grand Lodge of Ohio F&AMP;AM</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="https://www.freemason.com/grand-lodge-of-ohio-member-center/" target="_blank">Ohio Grand View</a>
+                                        <a href="https://www.freemason.com/grand-lodge-of-ohio-member-center/" target="_blank" rel="noopener noreferrer">Ohio Grand View</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a href="http://www.ohiodistrict22.org" target="_blank" rel="noopener noreferrer">22nd Masonic District of Ohio</a>
@@ -147,13 +147,13 @@
                 <ul class="usa-nav__secondary-links">
                     <li class="usa-nav__secondary-item">
                         <a class="me-1" href="https://www.facebook.com/lodge388/" target="_blank" rel="noopener noreferrer">
-                            <img src="../../../assets/images/facebook_icon.svg"/>
+                            <img id="facebook-link" alt="Link to Facebook" src="../../../assets/images/facebook_icon.svg"/>
                         </a>
                         <a class="me-1" href="https://twitter.com/forestcitylodge" target="_blank" rel="noopener noreferrer">
-                            <img src="../../../assets/images/twitter_icon.svg"/>
+                            <img id="twitter-link" alt="Link to Twitter" src="../../../assets/images/twitter_icon.svg"/>
                         </a>
                         <a href="https://www.instagram.com/forestcitylodge388/" target="_blank" rel="noopener noreferrer">
-                            <img src="../../../assets/images/instagram_icon.svg"/>
+                            <img id="instagram-link" alt="Link to Instagram" src="../../../assets/images/instagram_icon.svg"/>
                         </a>
                     </li>
                 </ul>
