changed format for main image to improve performance

--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,5 +1,5 @@
 .fcl-home-welcome {
-    background: url(../../../assets/images/officers_2021_2022.jpg) no-repeat center;
+    background: url(../../../assets/images/officers_2021_2022.webp) no-repeat center;
     background-size: cover;
     height: 785px;
     position: relative;
