updated headers, recent events link

--- a/src/app/forest-city/bulletin/bulletin.component.scss
+++ b/src/app/forest-city/bulletin/bulletin.component.scss
@@ -4,7 +4,7 @@
 
         & > iframe {
             width: 100vw;
-            height: 2100px;
+            height: 100vh;
 
             @media screen and (min-width: 1024px) {
                 width: 1024px;
