--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -50,18 +50,21 @@
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/bulletin">Our Current Bulletin</a>
                                     </li>
-                                    <li class="usa-nav__submenu-item">
-                                        <a href="../../../assets/pdf/FCL_Petition_-_20182.pdf" target="_blank">Our Petition</a>
-                                    </li>
+                                    <!-- <li class="usa-nav__submenu-item">
+                                        <a routerLink="/past-bulletins">Our Past Bulletins</a>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
-                                    <!-- <li class="usa-nav__submenu-item">
+                                    <li class="usa-nav__submenu-item">
                                         <a routerLink="/recent-events">Recent Events</a>
-                                    </li> -->
+                                    </li>
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/about-us">About Us</a>
+                                    </li>
+                                    <li class="usa-nav__submenu-item">
+                                        <a href="../../../assets/pdf/FCL_Petition_-_20182.pdf" target="_blank">Our Petition</a>
                                     </li>
                                 </ul>
                             </div>
