--- a/src/app/forest-city/our-officers/our-officers.component.html
+++ b/src/app/forest-city/our-officers/our-officers.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="grid-col-12 padding-y-3">
+    <div class="grid-col-12 padding-y-3 margin-bottom-3 bg-primary-lighter">
         <div class="centered">
             <h2>Our 2021 - 2022 Officers</h2>
         </div>
