added past bulletins

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -50,9 +50,9 @@
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/bulletin">Our Current Bulletin</a>
                                     </li>
-                                    <!-- <li class="usa-nav__submenu-item">
+                                    <li class="usa-nav__submenu-item">
                                         <a routerLink="/past-bulletins">Our Past Bulletins</a>
-                                    </li> -->
+                                    </li>
                                 </ul>
                             </div>
                             <div class="usa-col">
