--- a/src/app/forest-city/future-events/rsvp/rsvp.component.html
+++ b/src/app/forest-city/future-events/rsvp/rsvp.component.html
@@ -78,6 +78,9 @@
                                     <option value=9>9</option>
                                     <option value=10>10</option>
                                 </select>
+                                <div>
+                                    Cost: ${{ event.earlyBirdOptions.cost }} per meal
+                                </div>
                             </div>
                         </div>
                         <div *ngIf="displayMealChoices()" class="mb-3">
