--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -23,8 +23,12 @@
                                     {{event.description}}
                                 </div>
                                 <div class="future-events-list-item-location text-base d-flex flex-wrap">
-                                    <div>{{getEarlyBirdOptions(event.earlyBirdOptions)}}</div>
-                                    <div>&nbsp;|&nbsp;<a class="text-base" [href]="event.addressLink" target="_blank">{{event.address}}</a></div>
+                                    <!-- <div>
+                                        {{ getEarlyBirdOptions(event.earlyBirdOptions) }}&nbsp;|&nbsp;
+                                    </div> -->
+                                    <div>
+                                        <a class="text-base" [href]="event.addressLink" target="_blank">{{ event.address }}</a>
+                                    </div>
                                 </div>
                             </div>
                             <div *ngIf="isRsvp(event)">
