updated recent events

--- a/src/app/forest-city/recent-events/recent-events.component.html
+++ b/src/app/forest-city/recent-events/recent-events.component.html
@@ -12,7 +12,7 @@
                         <img src="https://storage.cloud.google.com/forest-city-website-images/{{event.albumName}}/{{imageUrls}}" class="d-block w-100"/>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>{{ event.slideLabels[j] }}</h5>
-                            <p>{{ event.slideContent }}</p>
+                            <p>{{ event.slideContent[j] }}</p>
                         </div>
                     </div>
                 </div>
