updated header nav bar

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -25,7 +25,7 @@
             <ul class="usa-nav__primary usa-accordion">
                 <li class="usa-nav__primary-item">
                     <button class="usa-accordion__button usa-nav__link" aria-expanded="false" aria-controls="navSectionOne">
-                        <span>About Forest City Lodge</span>
+                        <span>About Forest City</span>
                     </button>
                     <div id="navSectionOne" class="usa-nav__submenu usa-megamenu" hidden>
                         <div class="grid-row grid-gap-4">
@@ -137,6 +137,9 @@
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/upcoming-events" class="usa-nav__link">Upcoming Events</a>
+                </li>
+                <li class="usa-nav__primary-item">
+                    <a routerLink="/recent-events" class="usa-nav__link">Recent Events</a>
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/image-gallery" class="usa-nav__link">Image Gallery</a>
