--- a/src/app/forest-city/future-events/rsvp/rsvp.component.html
+++ b/src/app/forest-city/future-events/rsvp/rsvp.component.html
@@ -109,9 +109,9 @@
                                     </div>
                                 </div>
                                 <div *ngIf="displayMultipleMealChoices()">
-                                    <label class="usa-label" for="numberOfMeat">Number of Prime Rib:</label>
+                                    <label class="usa-label" for="numberOfMeat">Number of {{ event.earlyBirdOptions.choices[0] }}:</label>
                                     <input class="usa-input" type="number" min="0" id="numberOfMeat" formControlName="numberOfMeat">
-                                    <label class="usa-label" for="numberOfFish">Number of Salmon:</label>
+                                    <label class="usa-label" for="numberOfFish">Number of {{ event.earlyBirdOptions.choices[1] }}:</label>
                                     <input class="usa-input" type="number" min="0" id="numberOfFish" formControlName="numberOfFish">
                                 </div>
                             </fieldset>
