--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -22,6 +22,9 @@
                                 <div *ngIf="event.description" class="fs-6">
                                     {{event.description}}
                                 </div>
+                                <div *ngIf="event.extraInfo" class="fs-6">
+                                    <i>{{event.extraInfo}}</i>
+                                </div>
                                 <div class="future-events-list-item-location text-base d-flex flex-wrap">
                                     <div>
                                         <a class="text-base" [href]="event.addressLink" target="_blank">{{ event.address }}</a>
