added golden square past masters, updated link to 22nd district

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -38,14 +38,14 @@
                                         <a routerLink="/past-masters">Our Past Masters</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/our-officers">Our Current Officers</a>
+                                        <a routerLink="golden-square-past-masters">Past Masters of Golden Square Lodge No. 679</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/upcoming-events">Our Calendar</a>
+                                        <a routerLink="/our-officers">Our Current Officers</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/bulletin">Our Current Bulletin</a>
@@ -58,11 +58,18 @@
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
+                                        <a routerLink="/upcoming-events">Our Calendar</a>
+                                    </li>
+                                    <li class="usa-nav__submenu-item">
                                         <a routerLink="/recent-events">Recent Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/about-us">About Us</a>
                                     </li>
+                                </ul>
+                            </div>
+                            <div class="usa-col">
+                                <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
                                         <a href="../../../assets/pdf/FCL_Petition_-_20182.pdf" target="_blank">Our Petition</a>
                                     </li>
@@ -86,7 +93,7 @@
                                         <a href="https://www.freemason.com/grand-lodge-of-ohio-member-center/" target="_blank" rel="noopener noreferrer">Ohio Grand View</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.ohiodistrict22.org" target="_blank" rel="noopener noreferrer">22nd Masonic District of Ohio</a>
+                                        <a href="http://tremendous22nd.org/" target="_blank" rel="noopener noreferrer">22nd Masonic District of Ohio</a>
                                     </li>
                                 </ul>
                             </div>
