--- a/src/app/forest-city/golden-square/past-masters/golden-square-pm.component.html
+++ b/src/app/forest-city/golden-square/past-masters/golden-square-pm.component.html
@@ -8,7 +8,7 @@
 <br>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-6 text-center my-3">
+        <div class="col-lg-6 col-sm-9 text-center my-3">
             <div class="table-responsive">
                 <table class="table table-striped table-hover align-middle">
                     <tr>
