social outing integration

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -73,6 +73,9 @@
                                     <li class="usa-nav__submenu-item">
                                         <a href="../../../assets/pdf/FCL_Petition_-_20182.pdf" target="_blank">Our Petition</a>
                                     </li>
+                                    <li class="usa-nav__submenu-item">
+                                        <a routerLink="/social-outings">Social Outings</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
