updated card headers

--- a/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.html
+++ b/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.html
@@ -6,13 +6,13 @@
     <div class="social-events-content bg-primary-lighter py-3">
         <div class="container">
             <div class="row centered">
-                <div class="fs-3 text-align-center pb-4">"Forest City In The City" is Forest City Lodge No. 388's informal gathering hub.</div>
+                <div class="fs-3 text-align-center pb-4">"Forest City In The City" are Forest City Lodge No. 388's informal social gathering events.</div>
             </div>
 
             <div class="row row-cols-1 row-cols-md-3 g-4 pb-3 centered">
                 <div class="col">
                     <div class="card h-100">
-                        <div class="card-header">
+                        <div class="card-header bg-primary-vivid text-white">
                             <h5 >Building Brotherhood</h5>
                         </div>
                         <div class="card-body">
@@ -23,8 +23,8 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <div class="card-header">
-                            <h5>All are welcome!</h5>
+                        <div class="card-header bg-primary-vivid text-white">
+                            <h5>All Are Welcome!</h5>
                         </div>
                         <div class="card-body">
                             <p class="card-text">These events are open to the general public, not only Freemasons.</p>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <div class="card-header">
+                        <div class="card-header bg-primary-vivid text-white">
                             <h5 class="card-title">All Events Are Pay-your-own-way</h5>
                         </div>
                         <div class="card-body">
