--- a/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.html
+++ b/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.html
@@ -6,7 +6,7 @@
     <div class="social-events-content bg-primary-lighter py-3">
         <div class="container">
             <div class="row centered">
-                <div class="fs-3 text-align-center pb-4">"Forest City In The City" are Forest City Lodge No. 388's informal social gathering events.</div>
+                <div class="fs-4 text-align-center pb-4">Forest City Lodge No. 388's Informal Social Gathering Events</div>
             </div>
 
             <div class="row row-cols-1 row-cols-md-3 g-4 pb-3 centered">
