--- a/src/app/forest-city/future-events/future-events.component.scss
+++ b/src/app/forest-city/future-events/future-events.component.scss
@@ -1,7 +1,19 @@
 .future-events {
-    a {
+    a:link {
         text-decoration: none;
     }
+
+    // a:visited {
+    //     text-decoration: none;
+    // }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
+    // a:active {
+    //     text-decoration: underline;
+    // }
 
     @media screen and (min-width: 1024px) {
         &-title,&-content {
