--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -38,6 +38,7 @@
                                 <div class="rsvpButton">
                                     <button aria-controls="rsvpModal"
                                     class="usa-button usa-button--outline centered mb-2"
+                                    [ngClass]="tableLodgeAttendeeCount >= 56 ? 'disabled' : ''"
                                     (click)="setEventForRsvp(event)"
                                     data-bs-toggle="modal"
                                     data-bs-target="#rsvpModal">
